--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+    <script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Organization",
+  "url": "http://www.your-company-site.com",
+  "contactPoint": [{
+    "@type": "ContactPoint",
+    "telephone": "+1-401-555-1212",
+    "contactType": "customer service"
+  }]
+}
+</script>
     <section class="page-header">
       <h1 class="project-name">Data365</h1>
       <h2 class="project-tagline">Make the Future APP.</h2>
