--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 {
   "@context": "http://schema.org",
   "@type": "Organization",
-  "url": "http://www.your-company-site.com",
+  "url": "https://hmwoliul.github.io/data365/",
   "contactPoint": [{
     "@type": "ContactPoint",
-    "telephone": "+1-401-555-1212",
+    "telephone": "",
     "contactType": "customer service"
   }]
 }
