--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <link rel='shortcut icon' href='data365.ico' type='image/x-icon'/ >
     <meta charset="UTF-8">
     <title>Data365 by hmwoliul</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
