--- a/ah/index.html
+++ b/ah/index.html
@@ -5,7 +5,7 @@
 <right>
     <div>
 	    <h1><a> Data365{\}</a><br>
-		<b> make the better app:) </b><br>
+		<b> make the better app:) </b>
 		</h1>
 		 <div>
 		 <div style="margin-top:5px;">
