--- a/ah/index.html
+++ b/ah/index.html
@@ -4,21 +4,23 @@
 <link rel="stylesheet" type="text/css" href="css/style_index.css">
 <right>
     <div>
-	    <h1><a> Data365{\}</a><br>
-		<b> make the better app:) </b>
-		</h1>
+	    <h1><a> Data365{\}</a><div>
+		Make the better APP :)</div></h1>
 		 <div>
 		 <div style="margin-top:5px;">
-		 	<h6></h6><table style="margin-right:100px;margin-top:70px; align=right; width:30%;">
-<tbody style="margin-right:100px;">
-<tr><td> Don't   have   account? </td> </tr><tr><td>
-<button type="submit" name="bpn_login">Sign Up Here</button></td></tr>
-</tbody></table>
+		 	<h6></h6>
+<table>
+		<tbody style="margin-right:100px;">
+		<tr><td><b> Don't   have  an  account?</b> </td> </tr><tr><td>
+		<button type="submit" name="bpn_login"><b>Sign Up Here</b></button></td></tr>
+		</tbody>
+	</table>
+
 <table2 style="border: 2;">
-<form style="margin-left:50px" method="post">
-Email Address<input placeholder="your@email.com" name="email " required="" ""="" type="text">
-Password<input placeholder="**********" style="margin-top:12px;border-width:2px" name="pass" required="" ""="" type="password"> 
-<button type="submit" name="bpn_login"> Sign In </button> 
+<form method="post"><b>
+Email Address</b><input placeholder="your@email.com" name="email " required="" ""="" type="text"><b>
+Password</b><input placeholder="**********" style="margin-top:12px;border-width:2px" name="pass" required="" ""="" type="password"> 
+<button type="submit" name="bpn_login"><b> Sign In </b></button> 
 </form></table2>
 
 </div>
