--- a/ahr.html
+++ b/ahr.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>New Apps</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="ahr_style.css">
 </head>
 <body>
     <h1>DATA 365</h1>
